# secdevai

./: AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: USAGE.md
lola-module/skills/oci-image-security/: SKILL.md
lola-module/skills/oci-image-security/references/: config-security-patterns.md  hardening-checklist.md  supply-chain-patterns.md
lola-module/skills/secdevai/: SKILL.md
lola-module/skills/secdevai-dast/: SKILL.md
lola-module/skills/secdevai-dast/scripts/: rapidast-scan.sh
lola-module/skills/secdevai-export/: SKILL.md
lola-module/skills/secdevai-export/scripts/: results_exporter.py
lola-module/skills/secdevai-fix/: SKILL.md
lola-module/skills/secdevai-help/: SKILL.md
lola-module/skills/secdevai-oci-image-security/references/: eol-detection.md
lola-module/skills/secdevai-review/: SKILL.md
lola-module/skills/secdevai-review/context/: .secdevaiignore  security-review.context  security-rules.md
lola-module/skills/secdevai-tool/: SKILL.md
lola-module/skills/secdevai-tool/scripts/: Dockerfile.semgrep  container-run.sh  security-review.sh
tests/: conftest.py  test_module_deployer.py
